--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -41,7 +41,7 @@ body {
   margin: 0 auto;
   font-size: 16px;
   overflow: hidden;
-  -webkit-overflow-scrolling: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 #secondPage {
